welcome.lessons.welcome.array.array667.Array667.scala.error
array667:13: error: ';' expected but 'else' found.
      else
      ^